[package]
name = "bevy-stylus-plugin"
version = "0.1.0"
edition = "2021"
description = "A Bevy plugin for integrating with Stylus blockchain contracts"
license = "MIT"
repository = "https://github.com/yourusername/bevy-stylus-plugin"
keywords = ["bevy", "blockchain", "stylus", "ethereum"]
categories = ["game-development", "blockchain"]

[dependencies]
bevy = "0.14"
ethers = "2.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
eyre = "0.6"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
bevy = "0.14"